# bayesian-online-change-point

./: Makefile  README.md  pyproject.toml
bocd/: conjugate_likelihoods.py  conjugate_priors.py  cp.py  hazard_functions.py
tests/: test_conjugate_likelihoods_convergence.py  test_conjugate_priors.py  test_conjugate_priors_update.py  test_conjugates.py  test_cp_runs.py  test_posterior_predictive_rvs.py
