[tool.poetry]
name = "bocd"
version = "0.1.0"
description = "bayesian online change point algorithms"
authors = ["Andrew Muth <agmuth@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.0"
scipy = "^1.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.275"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
